k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-detection-app
  labels:
    app: face-detection
spec:
  replicas: 2
  selector:
    matchLabels:
      app: face-detection
  template:
    metadata:
      labels:
        app: face-detection
    spec:
      containers:
      - name: face-detection
        image: ghcr.io/kadam12g/face-detect-app:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: uploads
          mountPath: /app/app/static/uploads
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "200m"
            memory: "200Mi"
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads-pvc
