k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-detection-ingress
  annotations:
    traefik.ingress.kubernetes.io/maximum-body-size: "16m"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - face-detection.kissadam.info
    secretName: face-detection-tls
  rules:
  - host: face-detection.kissadam.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: face-detection-service
            port:
              number: 80
